# ToDo

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_task.yml  2_story.yml  3_feature.yml  feature-issue.md  story-issue.md  task-issue.md
backend/: .env.sample  .gitignore  Cargo.toml  Dockerfile
backend/.devcontainer/: devcontainer.json.example
backend/src/: handlers.rs  main.rs  repositories.rs
backend/src/repositories/: repositories.rs
frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  bun.lockb  next.config.mjs  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tailwind.config.ts
frontend/.devcontainer/: devcontainer.json.example
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/pageContent/ToDos/: ToDos.tsx  index.ts
