[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13" 
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features = ["env-filter"]}
serde = { version="1.0.196", features = ["derive"]}